# googletest-sample-cmake-test

./: .travis.yml  CMakeLists.txt  Jenkinsfile.Linux  Jenkinsfile.Mac  Jenkinsfile.Win  README.md  create-build.sh  run-tests.bat  run-tests.sh  runtime.cmake  update-submodule.sh
src/: CMakeLists.txt  calc.h
tests/: CMakeLists.txt  tests.cmake
